# metronom

./: .gitignore  CMakeLists.txt  engi.cpp  glad.c
Release/: imgui.ini  settings.json
config/: config_schema.json
include/: AccuracyAnalyzer.h  AudioEngine.h  AudioMixer.h  AudioResampler.h  CoachHistory.h  DCOffsetFilter.h  DeviceManager.h  FontRenderer.h  FreePlayTracker.h  IMetronomeModule.h  ITrainingModule.h  InputProcessor.h  LiveCoach.h  LiveTempoDetector.h  LockFreeQueue.h  MainGUI.h  MetronomeCore.h  MetronomeEngine.h  MidiSyncManager.h  MixerState.h  OfflineRenderer.h  PitchResult.h  PolyrhythmEngine.h  PreciseTuner.h  RhythmGrid.h  RingBuffer.h  SettingsManager.h  SmartOnsetDetector.h  TapDetector.h  TempoCoach.h  TempoMap.h  TrainingModules.h  TrainingModules2.h  TunerWorker.h  UIController.h  UIRenderer.h
plugins/: AccuracyCalculator.cpp  TrainingModules.cpp
src/: AccuracyAnalyzer.cpp  AudioEngine.cpp  AudioMixer.cpp  CoachHistory.cpp  DeviceManager.cpp  FontRenderer.cpp  FreePlayTracker.cpp  InputProcessor.cpp  LiveCoach.cpp  LiveTempoDetector.cpp  MainGUI.cpp  MetronomeCore.cpp  MetronomeEngine.cpp  MidiSyncManager.cpp  OfflineRenderer.cpp  PolyrhythmEngine.cpp  PreciseTuner.cpp  SettingsManager.cpp  SmartOnsetDetector.cpp  TapDetector.cpp  TempoCoach.cpp  TempoMap.cpp  TunerWorker.cpp  UIController.cpp  UIRenderer.cpp  main.cpp
